--- a/.github/workflows/github_stats.yml
+++ b/.github/workflows/github_stats.yml
@@ -5,5 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Generate GitHub Stats
-        run: curl -H "Authorization: token ${{ secrets.PAT_GITHUB_README_STATS }}" \
+        run: |
+          curl -H "Authorization: token ${{ secrets.PAT_GITHUB_README_STATS }}" \
           "https://github-readme-stats.vercel.app/api?username=mikhail-ramirez&show_icons=true&count_private=true&hide_border=true"
